--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 />
 <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+<script src="{{ '/assets/js/main.js' | relative_url }}" defer></script>
 </head><body>
   {% include header.html %}
   <main class="container">{{ content }}</main>
