--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
-<footer>
-  <p>&copy; {{ 'now' | date: '%Y' }} Luke Hartfield</p>
+<footer class="text-muted py-3">
+  <div class="container">
+    <small>&copy; {{ 'now' | date: '%Y' }} Luke Hartfield</small>
+  </div>
 </footer>
