--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,11 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{{ '/Projects/' | relative_url }}">
+            <span class="fas fa-file-pdf"></span>&nbsp;Resume
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="{{ '/resume/' | relative_url }}">
             <span class="fas fa-file-pdf"></span>&nbsp;Resume
           </a>
