Update Projects link with icon in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item">
   <a class="nav-link" href="{{ '/projects/' | relative_url }}">
-    🛠️&nbsp;Projects
+    <span class="fas fa-briefcase"></span>
   </a>
 </li>
 
