--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item">
   <a class="nav-link" href="{{ '/projects/' | relative_url }}">
-    <span class="fas fa-briefcase"></span>
+    <span class="fas fa-briefcase"></span>&nbsp;Projects
   </a>
 </li>
 
